@@ -1,5 +1,5 @@
 <!-- Popup selected items -->
 <tal:entry tal:repeat="item python:view.items">
   <div tal:define="popup_view nocall:item/@@eeareferencebrowser-popup-selecteditem.html"
-    tal:replace="structure python:popup_view(field=view.field, mode=view.mode)" />
+    tal:replace="structure python:popup_view(field=view.field, mode=view.mode, context=view.context)" />
 </tal:entry>
